--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Initial Catalog=ContosoUniversity;User Id=sa;Password=Iec+123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
