--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "JwtSettings": {
+    "Issuer": "JwtAuthDemo",
+    "SignKey": "1Zl4h9703IzROikK3@uK&&OEb"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Initial Catalog=ContosoUniversity;User Id=sa;Password=Iec+123"
   },
